--- a/args.gn
+++ b/args.gn
@@ -28,6 +28,9 @@ use_cfi_cast = true
 use_relative_vtables_abi = false
 
 enable_gvr_services = false
+enable_vr = false
+enable_arcore = false
+enable_openxr = false
 enable_remoting = false
 enable_reporting = false
 
